# pypkgs_atan

./: CONTRIBUTING.rst  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  pypkgs_atan.rst
tests/: test_pypkgs_atan.py
