[tool.poetry]
name = "pypkgs_atan"
version = "0.1.0"
description = ""
authors = ["tan95 <andrew--tan@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
